fix viewport overflow in chrome

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -11,10 +11,14 @@ L A Y O U T
 
 ************************************
 ************************************/
+.html {
+  height: 100%;
+}
+
 .page {
   margin: 0;
 
-  min-height: 100vh;
+  min-height: 100%;
   
   display: -webkit-flex;  
   display: -ms-flexbox;
